--- a/src/main/resources/conexao.properties
+++ b/src/main/resources/conexao.properties
@@ -9,6 +9,6 @@ hibernate.use_sql_comments=false
 
 # Conexão JDBC
 jdbc.driver_class=org.gjt.mm.mysql.Driver
-jdbc.username=livro
-jdbc.password=livro123
-jdbc.url=jdbc:mysql://localhost:3306/livro
+jdbc.username=root
+jdbc.password=
+jdbc.url=jdbc:mysql://173.255.117.244:3306/livro
